--- a/gateway/ln-gateway/Cargo.toml
+++ b/gateway/ln-gateway/Cargo.toml
@@ -80,6 +80,7 @@ fedimint-ln-server = { path = "../../modules/fedimint-ln-server" }
 fedimint-ln-common = { path = "../../modules/fedimint-ln-common" }
 fedimint-mint-client = { path = "../../modules/fedimint-mint-client" }
 fedimint-wallet-client = { path = "../../modules/fedimint-wallet-client" }
+fedimint-wallet-server = { path = "../../modules/fedimint-wallet-server" }
 fedimint-testing = { path = "../../fedimint-testing" }
 threshold_crypto = { git = "https://github.com/fedimint/threshold_crypto" }
 assert_matches = "1.5.0"
